Basic react setup

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body>
-    <h1>Cinemagical!</h1>
-  </body>
+    <head>
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <script type="text/javascript" src="index.js" defer></script>
+    </head>
+    <body>
+        <div id="react-root">Loading...</div>
+    </body>
 </html>
