--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Cinemagic</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <script type="text/javascript" src="index.js" defer></script>
     </head>
