Add admin page, overhaul app
Commits squashed to avoid accidentally leaking bits of the model
solution

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,10 +2,29 @@
 <html>
     <head>
         <title>Cinemagic</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
-        <script type="text/javascript" src="index.js" defer></script>
+
+        <!-- Third party fonts -->
+        <link rel="stylesheet"
+              href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
+              integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+              crossorigin="anonymous">
+        <link rel="stylesheet"
+              href="https://use.fontawesome.com/releases/v5.0.10/css/solid.css"
+              integrity="sha384-HTDlLIcgXajNzMJv5hiW5s2fwegQng6Hi+fN6t5VAcwO/9qbg2YEANIyKBlqLsiT"
+              crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300" rel="stylesheet">
+
+        <!--
+            Include our CSS and JS.
+
+            index.css has been compiled with node-sass and should not be modified.
+            index.js has been compiled with webpack and should not be modified.
+        -->
+        <link rel="stylesheet" type="text/css" href="/index.css">
+        <script type="text/javascript" src="/index.js" defer></script>
     </head>
     <body>
+        <!-- This div will be populated by the React framework when it loads -->
         <div id="react-root">Loading...</div>
     </body>
 </html>
