First round of styling, up to cinema select

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,10 @@
     </head>
     <body>
         <!-- This div will be populated by the React framework when it loads -->
-        <div id="react-root">Loading...</div>
+        <div id="react-root">
+            <div class="spinner-container">
+                <div class="spinner"></div>
+            </div>
+        </div>
     </body>
 </html>
